0.19.9	2018-11-06

 * Fix encoding when reading README file in setup.py.
   (egor <egor@sourced.tech>, #668)

 * Preserve port and username in parsed HTTP URLs.
   (Jelmer Vernooĳ)

 * Add basic server side implementation of ``git-upload-archivw``.
   (Jelmer Vernooĳ)

0.19.7	2018-11-05

 CHANGES

  * Drop support for Python 3 < 3.4. This is because
    pkg_resources (which get used by setuptools and mock)
    no longer supports 3.3 and earlier. (Jelmer Vernooĳ)

 IMPROVEMENTS

  * Support ``depth`` argument to ``GitClient.fetch_pack`` and support
    fetching and updating shallow metadata. (Jelmer Vernooĳ, #240)

 BUG FIXES

  * Don't write to stdout and stderr when they are not available
    (such as is the case for pythonw). (Sylvia van Os, #652)

  * Fix compatibility with newer versions of git, which expect CONTENT_LENGTH
    to be set to 0 for empty body requests. (Jelmer Vernooĳ, #657)

  * Raise an exception client-side when a caller tries to request
    SHAs that are not directly referenced the servers' refs.
    (Jelmer Vernooĳ)

  * Raise more informative errors when unable to connect to repository
    over SSH or subprocess. (Jelmer Vernooĳ)

  * Handle commit identity fields with multiple ">" characters.
    (Nicolas Dandrimont)

 IMPROVEMENTS

  * ``dulwich.porcelain.get_object_by_path`` method for easily
    accessing a path in another tree. (Jelmer Vernooĳ)

  * Support the ``i18n.commitEncoding`` setting in config.
    (Jelmer Vernooĳ)

0.19.6	2018-08-11

 BUG FIXES

  * Fix support for custom transport arguments in ``dulwich.porcelain.clone``.
    (Semyon Slepov)

  * Fix compatibility with Python 3.8 (Jelmer Vernooĳ, Daniel M. Capella)

  * Fix some corner cases in ``path_to_tree_path``. (Romain Keramitas)

  * Support paths as bytestrings in various places in ``dulwich.index``
    (Jelmer Vernooĳ)

  * Avoid setup.cfg for now, since it seems to break pypi metadata.
    (Jelmer Vernooĳ, #658)

0.19.5	2018-07-08

 IMPROVEMENTS
